--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,29 @@
+body {
+    background-image: url(../images/background-img.jpg);
+    background-repeat: no-repeat;
+    background-position: left top;
+    background-attachment: fixed;
+    background-color: black;
+
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+header {
+    text-shadow: 0 0 10px black;
+    color: aliceblue;
+}
+
+div {
+    background-color: rgba(0, 0, 0, 0.75);
+    color: aliceblue;
+    margin: 5px;
+    padding: 15px;
+    border: 3px burlywood double;
+}
+
 #cov-1, #cov-2, #cov-3, #cov-4 {
     max-width: 125px;
 }
