--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -26,8 +26,13 @@ li {
     margin: 5px;
     padding: 15px;
     border: 3px burlywood double;
+    border-radius: 5px;
 }
 
 #cov-1, #cov-2, #cov-3, #cov-4 {
     max-width: 125px;
+}
+
+#cov-1:hover, #cov-2:hover, #cov-3:hover, #cov-4:hover {
+    
 }
