--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,9 +8,8 @@
 
 body {
     background-image: url(../images/background-img.jpg);
-    background-repeat: repeat;
-    background-position: left top;
-    background-attachment: fixed;
+    background-position: 50% 25%;
+    background-size: 100%;
     background-color: black;
 }
 
